--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@types/express-rate-limit": "^5.1.3",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
